[package]
name = "rargsxd"
version = "0.1.6"
authors = ["BubbyRoosh"]
edition = "2018"
license-file = "LICENSE"
description = "Small and simple argument parsing crate."
repository = "https://github.com/BubbyRoosh1/rargsxd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
